# WCSPR

./: .gitignore  Makefile  README.md
contracts/: Cargo.toml
contracts/src/: entry_points.rs  helpers.rs  pre_deposit.rs  wcspr_contract.rs
tests/: Cargo.toml
tests/src/: integration_tests.rs  pre_deposit.rs  test_fixture.rs
wcspr/: Cargo.toml
wcspr/src/: pre_deposit.rs
