[package]
name = "wcspr"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.3.3"
casper-erc20 = "0.2.0"
casper-types = "1.3.3"

[[bin]]
name = "wcspr"
path = "src/main.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "pre_deposit"
path = "src/pre_deposit.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

